--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,4 +4,49 @@
 Paleta de cores:
 Verde : #49a09d
 Lilaís: #5f2c82
+Azul: #3AAED8
+Escuro: #22333B
+Mostarda: #BBBE64
 */
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+body, html{
+    background-color: #5ebbdd;
+    height: 100vh;
+    width: 100vw;
+}
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+    overflow: hidden; /* tudo que estiver fora da borda, vai esconder, ou seja, vai arreondar*/
+
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgb(99, 97, 97);
+}
+section#login div#imagem{
+    display: block;
+    background: #5ebbdd url(../imagens/pexels-travis-rupert-1032650.jpg) no-repeat;
+    height: 200px;
+    background-size: cover;
+    background-position: center center;
+}
+section#login div#formulario{
+    display: block;
+    padding: 10px;
+}
