adicionado media queries

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,6 +38,9 @@ section#login{
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgb(99, 97, 97);
+
+    transition: width .5s, height .5s;
+    transition-timing-function: ease;
 }
 section#login div#imagem{
     display: block;
