mudado cor de fundo mobile

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,7 +16,7 @@ Mostarda: #BBBE64
     box-sizing: border-box;
 }
 body, html{
-    background-color: #5ebbdd;
+    background-color: #FFB769;
     height: 100vh;
     width: 100vw;
 }
@@ -44,7 +44,7 @@ section#login{
 }
 section#login div#imagem{
     display: block;
-    background: #5ebbdd url(../imagens/pexels-travis-rupert-1032650.jpg) no-repeat;
+    background:  #FFB769 url(../imagens/pexels-travis-rupert-1032650.jpg) no-repeat;
     height: 200px;
     background-size: cover;
     background-position: center center;
