--- a/estilos/style.css
+++ b/estilos/style.css
@@ -53,3 +53,66 @@ section#login div#formulario{
     display: block;
     padding: 10px;
 }
+div#formulario h1{
+text-align: center;
+margin-bottom: 10px;
+}
+div#formulario p{
+    font-size: 0.8em;
+}
+form div.campo1{
+    display: block;
+    height: 40px;
+    border-radius: 5px 5px 0px 0px;
+    background-color: #D6A875;
+}
+
+
+form div.campo2{
+    display: block;
+    height: 40px;
+    border-radius: 0px 0px 5px 5px;
+    background-color: #D6A875;
+}
+div.campo1 label{
+    display: none;
+}
+div.campo2 label{
+    display: none;
+}
+form input[type=submit] { /* botao submit */
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color:#90a0ad63;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+form input[type=submit]:hover{
+    background-color:#5b7386bb ;
+    box-shadow: 1px 1px 1px rgba(71, 71, 71, 0.445);
+    transition-duration: .5s;
+}
+form a.botao{
+    display: block;
+    text-align: center;
+    margin-top: 10px;
+    padding-top: 7px;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #90a0ad63;
+    border: none;
+    text-decoration: none;
+}
+form a.botao:hover{
+    background-color:#5b7386bb ;
+    box-shadow: 1px 1px 1px rgba(71, 71, 71, 0.445);
+    transition-duration: .5s; 
+}
+
+form a.botao span{
+    font-size: 0.8em;
+}
