--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,7 +29,6 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform:translate(-50%, -50%);
     overflow: hidden; /* tudo que estiver fora da borda, vai esconder, ou seja, vai arreondar*/
 
 
@@ -39,6 +38,7 @@ section#login{
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgb(99, 97, 97);
 
+    transform:translate(-50%, -50%);
     transition: width .5s, height .5s;
     transition-timing-function: ease;
 }
@@ -58,13 +58,14 @@ text-align: center;
 margin-bottom: 10px;
 }
 div#formulario p{
+    margin: 10px;
     font-size: 0.8em;
 }
 form div.campo1{
     display: block;
     height: 40px;
     border-radius: 5px 5px 0px 0px;
-    background-color: #D6A875;
+    background-color: #f5f4f4;
 }
 
 
@@ -72,14 +73,51 @@ form div.campo2{
     display: block;
     height: 40px;
     border-radius: 0px 0px 5px 5px;
-    background-color: #D6A875;
+    background-color: #f5f4f4;
 }
 div.campo1 label{
     display: none;
 }
+div.campo1 span{
+    background-color: #D6A875;
+    padding-right: 10px;
+    border-radius: 5px;
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
 div.campo2 label{
     display: none;
 }
+div.campo1 input{
+    background-color: rgb(236, 240, 240);
+    font-size: 1em;
+    width:calc(100% - 44.8px) ;
+    height: 100%;
+    border: 0px;
+    border-radius: 5px 5px 0px 0px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+div.campo2 input{
+    background-color: rgb(237, 243, 243);
+    font-size: 1em;
+    width:calc(100% - 45.38px) ;
+    height: 100%;
+    border: 0px;
+    border-radius: 0px 0px 5px 5px;
+    padding: 4px;
+    transform: translateY(-9px);
+}
+div.campo2 span{
+    background-color: #D6A875;
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
 form input[type=submit] { /* botao submit */
     display: block;
     font-size: 1em;
